# qmsa

./: Dev.ipynb  README.md  pyproject.toml
.github/workflows/: publish.yml
src/qmsa/: model.py  utils.py
